...
                        Button(action: model.reconnect) {
                            Text("Reconnect")
                        }
                        .buttonStyle(FarsidePrimaryButtonStyle(height: 60))
                    }
                    Button(action: model.dismissConcealment) {
                        Text("Return to Farside")
                    }
                    .buttonStyle(FarsideSecondaryButtonStyle())
                }
            }
        }
        .padding(Farside.Space.l)
...
